--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,12 @@
+.main_logo {
+  width: 40px;
+}
+
+#app {
+  width: 100%;
+  height: 100%;
+}
+
 .page-container {
   width: 80%;
   margin: 0 auto;
@@ -52,7 +61,7 @@
   padding: 0.3rem;
   width: 80%;
   margin-top: 0.5rem;
-  background-color: #e6a751;
+  background-color: #3fdb4c;
 }
 .route-detail-container .route-data-container .route-data__item {
   font-weight: bold;
