--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,3 +1,10 @@
+@import "Register.scss";
+@import "Profile.scss";
+
+#app {
+    width:100%;
+    height: 100%;
+}
 .page-container {
     width: 80%;
     margin: 0 auto;
@@ -56,7 +63,7 @@
             padding: 0.3rem;
             width: 80%;
             margin-top: 0.5rem;
-            background-color: #e6a751;
+            background-color: #3fdb4c;
 
             &__name {
             
@@ -117,7 +124,6 @@
     padding: .5em;
     text-align: center;
     
-    // width: 250px;
     .closer {
         text-align: right;
         cursor: pointer;
